# knot

./: .dockerignore  .env.bak  .env.example  .gitignore  .knot-agent-skills.sh  .knot-agent.md  .prompt  Cargo.toml  Dockerfile  Dockerfile.clients  IMPLEMENTATION_SUMMARY.md  KOTLIN_E2E_QUICK_START.md  README.md  debug_css.rs  dist-workspace.toml  docker-compose.yml  glama.json
.github/workflows/: ci.yml  docker.yml
.knot/: index_state.json
benches/: token_tree_bench.rs
docs/agent-skills/: callers.md  explore.md  search.md  workflows.md
docs/specs/: jsx_react_support.md  multilanguage_roadmap.md  phase_7_cli_ux_plan.md  phase_8_python_plan.md  rust_integration_fixes.md  rust_integration_plan.md  v0.6.3_phase2_html_support_plan.md
queries/: css.scm  html.scm  java.scm  javascript.scm  kotlin.scm  python.scm  rust.scm  scss.scm  tsx.scm  typescript.scm
scripts/: download-agent-skills.sh  install-agent-skills.sh
src/: config.rs  lib.rs  mcp_handler.rs  models.rs
src/cli_tools/: explore_file.rs  find_callers.rs  mod.rs  search_hybrid_context.rs
src/cli_tools/formatters/: markdown.rs  mod.rs  table.rs
src/db/: graph.rs  mod.rs  vector.rs
src/db/graph/: connection.rs  delete.rs  mod.rs  query.rs  upsert.rs  utils.rs
src/db/vector/: connection.rs  delete.rs  mod.rs  search.rs  upsert.rs  utils.rs
src/mcp_tools/: explore_file.rs  find_callers.rs  mod.rs  search_hybrid_context.rs
src/mcp_tools/search_hybrid_context/: enrich.rs  format.rs  mod.rs
src/models/: entity.rs  mod.rs  relationship.rs
src/pipeline/: embed.rs  files.rs  ingest.rs  input.rs  mod.rs  parse.rs  prepare.rs  runner.rs  state.rs  watch.rs
src/pipeline/ingest/: batch.rs  mod.rs  resolve.rs
src/pipeline/parser/: comments.rs  context.rs  extractor.rs  java.rs  mod.rs  orphans.rs  test_utils.rs  typescript.rs  utils.rs
src/pipeline/parser/languages/: css.rs  html.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/utils/: mod.rs
testing_files/: test_comments.java
tests/: KOTLIN_E2E_TESTS.md  docker-compose.e2e.yml  run_e2e.sh  run_kotlin_e2e.sh  run_python_e2e.sh  run_rust_e2e.sh
tests/fixtures/: ApiController.ts  Counter.tsx  DataProcessor.java  SimpleService.java  UserService.ts
tests/testing_files/: sample.kt  sample.py  sample.rs  spa_app.css  spa_app.html  spa_app.js  test_angular.html  test_comments.ts  test_java.java  test_javascript.jsx  test_styles.css  test_styles.scss  test_typescript.ts
wix/: main.wxs
