[package]
name = "knot"
version = "0.1.1"
edition = "2024"
description = "Codebase Graph + Vector RAG Indexer for Java and TypeScript codebases"
authors = []
license = "MIT"

[dependencies]
# --- Async Runtime ---
tokio = { version = "1", features = ["full"] }

# --- CPU-bound Parallelism ---
rayon = "1"

# --- Filesystem Traversal ---
ignore = "0.4"
walkdir = "2"

# --- Tree-sitter Parsing ---
tree-sitter = "0.26"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"

# --- Local Embeddings ---
fastembed = "5"

# --- Vector Database ---
qdrant-client = "1"

# --- Graph Database ---
neo4rs = "0.9.0-rc.9"

# --- Unique Identifiers ---
uuid = { version = "1", features = ["v4", "serde"] }

# --- Configuration & CLI ---
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Error Handling ---
anyhow = "1"

# --- Streaming iterator ---
streaming-iterator = "0.1"

# --- Logging & Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- MCP Server SDK ---
rust-mcp-sdk = "0.8.3"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3