[package]
name = "knot"
version = "0.2.2"
edition = "2024"
description = "Codebase Graph + Vector RAG Indexer for Java and TypeScript codebases"
authors = ["Raul Tovar <angel.raul.tovar.martin@gmail.com>"]
license = "MIT"
repository = "https://github.com/raultov/knot"

[package.metadata.wix]
upgrade-guid = "92E1E683-D44D-4270-A4E6-4332677DC7B1"
path-guid = "577497D8-48AD-474A-B0C7-FF85F4EB383E"
license = false
eula = false

[dependencies]
# --- Async Runtime ---
tokio = { version = "1", features = ["full"] }

# --- CPU-bound Parallelism ---
rayon = "1"

# --- Filesystem Traversal ---
ignore = "0.4"
walkdir = "2"

# --- Tree-sitter Parsing ---
tree-sitter = "0.26"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"

# --- Local Embeddings ---
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries", "hf-hub", "image-models"] }
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "copy-dylibs", "ndarray"] }

# --- Vector Database ---
qdrant-client = "1"

# --- Graph Database ---
neo4rs = "0.9.0-rc.9"

# --- Unique Identifiers ---
uuid = { version = "1", features = ["v4", "serde"] }

# --- Configuration & CLI ---
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Error Handling ---
anyhow = "1"

# --- Streaming iterator ---
streaming-iterator = "0.1"

# --- Logging & Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- MCP Server SDK ---
rust-mcp-sdk = "0.8.3"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
